02-NodeJS-Service/02-storage/kube-manifests/01-nodejs-deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata: #Dictionary
  name: nodejs-app-deployment
  labels:
    app: nodejs-app
spec: # Dictionary
  replicas: 3
  selector:
    matchLabels:
      app: nodejs-app
  template:  
    metadata: # Dictionary
      name: nodejs-app-pod
      labels: # Dictionary
        app: nodejs-app  # Key value paids
    spec:
      containers: # List
        - name: nodejs-app
          image: papanadappt/my-node-app:0.0.6
          #command: ["npm", "start"]
          ports: 
            - containerPort: 8081
