02-NodeJS-Service/02-storage/kube-manifests/03-nodejs-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejsapp-ingress-service
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-app-clusterip-service
                port:
                  number: 80
